fix nav width on tablet

--- a/src/scss/blocks/nav.scss
+++ b/src/scss/blocks/nav.scss
@@ -22,6 +22,9 @@
         @media(min-width: $tablet) {
             flex-direction: row;
             align-items: start;
+            width: 81%;
+            margin-left: auto;
+            margin-right: auto; 
         }
     }
 
@@ -30,7 +33,7 @@
         color: white;
         line-height: 1.4em;
         font-size: 20px;
-        padding: 30px 9.5%;
+        padding: 30px 36px;
         font-weight: bold;
         z-index: 1;
 
@@ -56,7 +59,7 @@
                 width: 100%;
                 top: 100%;
                 left: 0;
-                background: url('../img/wave.png') top right 17.8% no-repeat, $green-color;
+                background: url('../img/wave.svg') top right 17.8% no-repeat, $green-color;
                 background-size: 230%;
             }
         }
